# cpplox

./: .gitignore  CMakeLists.txt  README.md  test.z
docs/: notes.md  parser.md
src/: main.cpp  main.d
src/AstPrinter/: AstPrinter.cpp  AstPrinter.h
src/Include/: ClockCallable.h  LoxCallable.h  LoxClass.h  LoxFunction.h  LoxInstance.cpp  LoxInstance.h  LoxObject.h
src/Interpreter/: Interpreter.cpp  Interpreter.h  RuntimeError.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Lox/: AstPrinter.cpp  AstPrinter.h  Expr.h  Lox.cpp  Lox.h  Stmt.h
src/Parser/: Parser.cpp  Parser.cpp~  Parser.h
src/Runtime/: Expr.h  Return.h  Runtime.cpp  Runtime.h  Stmt.h  Value.h
src/Scanner/: Scanner.cpp  Scanner.h
src/Semantic/: Environment.cpp  Environment.h  Resolver.cpp  Resolver.h
src/Token/: Token.cpp  Token.h  TokenType.h
src/utils/: utils.h
tools/: CMakeLists.txt  GenerateAST.cpp
